--- a/src/routes/vita/vita.styles.scss
+++ b/src/routes/vita/vita.styles.scss
@@ -6,12 +6,13 @@
   align-items: center;
   width: 100%;
   transition: all $theme-transition;
+
   .stats-container {
-    height: 50vw;
-    min-height: 800px;
-    width: 95%;
+    min-height: 60vh;
+    width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
     transition: all $theme-transition;
   }
 
@@ -21,7 +22,8 @@
     justify-content: flex-start;
     gap: 5px;
     width: 50vw;
-    height: 11.5vh !important;
+    height: 10vh !important;
+    max-height: 100px;
 
     padding-top: 10px;
     position: sticky;
@@ -57,7 +59,7 @@
     @include themed() {
       background-color: t($primary);
     }
-    transition: all $buttonTransitionTime, background-color 0.2s;
+    transition: all $buttonTransitionTime, background-color $theme-transition;
 
     &::before {
       //bottom side
