--- a/src/routes/feedback/feedback.styles.scss
+++ b/src/routes/feedback/feedback.styles.scss
@@ -47,7 +47,7 @@ $borderRadius: 4px;
 
   .button-container {
     height: 1vmin;
-    margin-bottom: 2vmin;
+    margin-bottom: 3vh;
   }
 
   .sign-in-button {
@@ -57,7 +57,7 @@ $borderRadius: 4px;
     transform: translate(-5%, -15%);
     font-family: $theme-font;
     text-decoration: none;
-    font-size: 2vmin;
+    font-size: 2.2vmin;
     transition: all $buttonTransitionTime, background-color $theme-transition;
     border-width: 0px;
 
