--- a/src/routes/portfolio/portfolio.styles.scss
+++ b/src/routes/portfolio/portfolio.styles.scss
@@ -12,7 +12,6 @@
     justify-content: space-between;
     gap: 20px;
   }
-
   .card-container {
     width: 35%;
     height: 45vh;
@@ -21,6 +20,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
     @include themed() {
       background-color: t($container-color);
       box-shadow: 6px 7px 4px t($shadow-color);
@@ -30,7 +30,7 @@
     border-top-right-radius: 0px;
 
     transition: background-color $theme-transition, border $theme-transition,
-      box-shadow $theme-transition;
+      box-shadow $theme-transition transform 0.5s;
 
     .card-image-container {
       align-items: center;
