--- a/src/routes/feedback/feedbackentry/feedbackentry.styles.scss
+++ b/src/routes/feedback/feedbackentry/feedbackentry.styles.scss
@@ -65,6 +65,7 @@ $borderRadius: 4px;
   }
   .date-container {
     font-size: 14px;
+    transition: all $theme-transition;
     @include themed() {
       color: darken(t($text-color), 15%);
     }
