--- a/src/routes/portfolio/portfolio.styles.scss
+++ b/src/routes/portfolio/portfolio.styles.scss
@@ -1,70 +1,84 @@
 @import "../../globals/_theme";
+$buttonTransitionTime: 0.1s;
+%test {
+  position: absolute;
+  content: "";
+  transition: all $buttonTransitionTime;
+}
+
 .Portfolio-Page {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
+
   .cards-container {
+    margin-top: 1.8vh;
     width: 90%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
+    justify-content: center;
+    gap: 5vh;
   }
   .card-container {
-    width: 35%;
-    height: 45vh;
-    flex: 1 1 auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+    transform: translate(-2%, -2%);
+    font-family: $theme-font;
+    text-decoration: none;
+    font-size: 3vh;
+    transition: all $buttonTransitionTime, background-color $theme-transition;
+    border-width: 0px;
+    height: 35vh;
+    width: 40vw;
+
     @include themed() {
-      background-color: t($container-color);
-      box-shadow: 6px 7px 4px t($shadow-color);
+      background-color: t($primary);
     }
-    border-radius: 10px;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-
-    transition: background-color $theme-transition, border $theme-transition,
-      box-shadow $theme-transition transform 0.5s;
-
-    .card-image-container {
-      align-items: center;
-      justify-content: center;
-      background: wheat;
+    &::before {
+      //bottom side
+      @extend %test;
+      bottom: -15px;
+      height: 15px;
       width: 100%;
-      height: 85%;
-      .card-image {
-      }
-    }
-
-    .card-title-container {
-      display: flex;
-      flex-direction: column;
+      left: 8px;
+      transform: skewX(45deg);
+      transition: all $buttonTransitionTime, background-color $theme-transition;
       @include themed() {
-        background: linear-gradient(
-          90deg,
-          t($background-center) -10%,
-          t($container-color) 50%,
-          t($background-center) 110%
-        );
+        background-color: darken(t($primary), 10%);
       }
-      border-bottom-left-radius: 10px;
-      border-bottom-right-radius: 10px;
+    }
+
+    &::after {
+      // right side
+      @extend %test;
+      right: -15px;
+      height: 100.5%;
+      width: 15px;
+      bottom: -8px;
+      transform: skewY(45deg);
+      @include themed() {
+        background-color: darken(t($primary), 30%);
+      }
+      transition: all $buttonTransitionTime, background-color $theme-transition;
+    }
+
+    .project-image {
       width: 100%;
-      flex: 1;
-      justify-content: center;
-      align-items: center;
-      .card-title {
-        @include themed() {
-          color: t($text-color);
-        }
-        font-family: $theme-font;
+      height: 86%;
+      @include themed() {
+        background-color: darken(t($primary), 10%);
       }
+    }
+    .project-title {
+      display: flex;
+      flex-direction: row;
+      color: #d8ddf5;
+      width: 99%;
+      padding-left: 1.5%;
+      align-items: center;
+      flex: 1;
     }
   }
 }
