Theme colro adjustments

--- a/src/globals/_theme.scss
+++ b/src/globals/_theme.scss
@@ -14,23 +14,23 @@ $background: "background";
 
 $themes: (
   light: (
-    primary: #062940,
+    primary: #87b1ac,
     sub-primary: #0863a0,
     background-center: white,
     background-sides: #f5f4ec,
     background: #f5f4ec,
-    text-color: #062940,
+    text-color: #62807d,
     border-color: black,
-    container-color: white,
+    container-color: #f1e6d8,
     shadow-color: rgb(209, 209, 209),
   ),
   dark: (
-    primary: #005180,
+    primary: #00446b,
     sub-primary: #d4eeff,
     background-center: #063b5f,
     background-sides: #02141e,
     background: rgb(10, 25, 41),
-    text-color: #d8ddf5,
+    text-color: #dcdff1,
     border-color: #f5f4ec,
     container-color: #02141e,
     shadow-color: rgb(0, 0, 0),
