--- a/src/routes/home/explore_button/venturebutton.styles.scss
+++ b/src/routes/home/explore_button/venturebutton.styles.scss
@@ -10,7 +10,6 @@ $borderRadius: 4px;
 .toVenturesButton {
   display: inline-block;
   padding: 20px 40px;
-  color: white;
   transform: translate(-10%, -10%);
   font-family: $theme-font;
   text-decoration: none;
@@ -20,6 +19,7 @@ $borderRadius: 4px;
 
   @include themed() {
     background-color: t($primary);
+    color: t($text-color);
   }
   &::before {
     //bottom side
