--- a/src/routes/contactme/contactbox/ContactBox.styles.scss
+++ b/src/routes/contactme/contactbox/ContactBox.styles.scss
@@ -20,6 +20,7 @@ $contact-sidesgap: 2.5rem;
   font-family: $theme-font;
   min-width: 710px;
   transition: all $theme-transition;
+  box-shadow: 10px 0px 30px -3px #000;
 
   display: flex;
   flex-direction: row;
@@ -38,7 +39,7 @@ $contact-sidesgap: 2.5rem;
     left: 9px;
     transform: skewX(45deg);
     @include themed() {
-      background-color: darken(t($container-color), 15%);
+      background-color: darken(t($primary), 18%);
     }
   }
 
@@ -51,7 +52,7 @@ $contact-sidesgap: 2.5rem;
     bottom: -10px;
     transform: skewY(45deg);
     @include themed() {
-      background-color: darken(t($container-color), 25%);
+      background-color: darken(t($primary), 25%);
     }
   }
 }
