--- a/src/routes/portfolio/portfolio.styles.scss
+++ b/src/routes/portfolio/portfolio.styles.scss
@@ -46,7 +46,7 @@ $buttonTransitionTime: 0.1s;
       transform: skewX(45deg);
       transition: all $buttonTransitionTime, background-color $theme-transition;
       @include themed() {
-        background-color: darken(t($primary), 10%);
+        background-color: darken(t($primary), 11%);
       }
     }
 
@@ -70,15 +70,25 @@ $buttonTransitionTime: 0.1s;
       @include themed() {
         background-color: darken(t($primary), 10%);
       }
+      z-index: -1;
+      .bgImage {
+        width: 100%;
+        height: 100%;
+      }
     }
     .project-title {
       display: flex;
       flex-direction: row;
-      color: #d8ddf5;
+      @include themed() {
+        color: t($text-color);
+      }
+
       width: 99%;
       padding-left: 1.5%;
       align-items: center;
       flex: 1;
+      z-index: 1;
+      box-shadow: 0px 0px 20px -2px #000;
     }
   }
 }
