--- a/src/routes/vita/vita.styles.scss
+++ b/src/routes/vita/vita.styles.scss
@@ -69,7 +69,7 @@
       left: 8px;
       transform: skewX(45deg);
       @include themed() {
-        background-color: darken(t($primary), 20%);
+        background-color: darken(t($primary), 17%);
       }
     }
 
@@ -82,7 +82,7 @@
       bottom: -6px;
       transform: skewY(45deg);
       @include themed() {
-        background-color: darken(t($primary), 30%);
+        background-color: darken(t($primary), 25%);
       }
     }
 
@@ -103,7 +103,7 @@
         left: 3px;
 
         @include themed() {
-          background-color: darken(t($primary), 20%);
+          background-color: darken(t($primary), 17%);
         }
       }
 
@@ -120,7 +120,7 @@
         bottom: -1px;
 
         @include themed() {
-          background-color: darken(t($primary), 30%);
+          background-color: darken(t($primary), 25%);
         }
       }
     }
@@ -134,7 +134,9 @@
     .category-text {
       margin-left: 5px;
       margin-right: 5px;
-      color: white;
+      @include themed() {
+        color: t($text-color);
+      }
     }
   }
 
@@ -170,7 +172,7 @@
       left: 3px;
 
       @include themed() {
-        background-color: darken(t($primary), 20%);
+        background-color: darken(t($primary), 17%);
       }
     }
 
@@ -187,14 +189,16 @@
       bottom: -1px;
 
       @include themed() {
-        background-color: darken(t($primary), 30%);
+        background-color: darken(t($primary), 25%);
       }
     }
 
     .category-text {
       margin-left: 5px;
       margin-right: 5px;
-      color: white;
+      @include themed() {
+        color: t($text-color);
+      }
     }
   }
 }
