--- a/src/globals/_theme.scss
+++ b/src/globals/_theme.scss
@@ -22,7 +22,7 @@ $themes: (
     text-color: #62807d,
     border-color: black,
     container-color: #f1e6d8,
-    shadow-color: rgb(209, 209, 209),
+    shadow-color: rgb(205, 205, 205),
   ),
   dark: (
     primary: #00446b,
@@ -33,7 +33,7 @@ $themes: (
     text-color: #dcdff1,
     border-color: #f5f4ec,
     container-color: #02141e,
-    shadow-color: rgb(0, 0, 0),
+    shadow-color: rgba(0, 0, 0, 0.6),
   ),
 );
 
