--- a/src/routes/portfolio/portfolio.styles.scss
+++ b/src/routes/portfolio/portfolio.styles.scss
@@ -28,14 +28,22 @@ $buttonTransitionTime: 0.1s;
     font-family: $theme-font;
     text-decoration: none;
     font-size: 3vh;
-    transition: all $buttonTransitionTime, background-color $theme-transition;
+    transition: all 0.6s, background-color $theme-transition;
     border-width: 0px;
     height: 35vh;
     width: 40vw;
+    cursor: pointer;
 
     @include themed() {
       background-color: t($primary);
     }
+    &:hover {
+      transform: translate(-5%, -5%);
+      @include themed() {
+        box-shadow: 33px 33px 12px t($shadow-color);
+      }
+    }
+
     &::before {
       //bottom side
       @extend %test;
@@ -58,37 +66,46 @@ $buttonTransitionTime: 0.1s;
       width: 15px;
       bottom: -8px;
       transform: skewY(45deg);
+      transition: all $buttonTransitionTime, background-color $theme-transition;
       @include themed() {
         background-color: darken(t($primary), 30%);
       }
-      transition: all $buttonTransitionTime, background-color $theme-transition;
     }
 
     .project-image {
       width: 100%;
-      height: 86%;
+      height: 85%;
+      transition: filter 0.3s ease-in-out;
+      z-index: 0;
       @include themed() {
         background-color: darken(t($primary), 10%);
       }
-      z-index: -1;
       .bgImage {
         width: 100%;
         height: 100%;
       }
     }
+    .project-image:hover {
+      filter: brightness(0.35) blur(3px);
+      -webkit-filter: brightness(0.35) blur(3px);
+    }
+
     .project-title {
+      transition: all $theme-transition;
       display: flex;
       flex-direction: row;
       @include themed() {
         color: t($text-color);
       }
 
-      width: 99%;
+      width: 98.5%;
       padding-left: 1.5%;
       align-items: center;
       flex: 1;
       z-index: 1;
-      box-shadow: 0px 0px 20px -2px #000;
+      @include themed() {
+        box-shadow: 4px -4px 15px t($shadow-color);
+      }
     }
   }
 }
