Portfolio almost complete - just add a few more images and text

--- a/src/globals/_theme.scss
+++ b/src/globals/_theme.scss
@@ -22,7 +22,7 @@ $themes: (
     text-color: #62807d,
     border-color: black,
     container-color: #f1e6d8,
-    shadow-color: rgb(205, 205, 205),
+    shadow-color: rgba(106, 106, 106, 0.6),
   ),
   dark: (
     primary: #00446b,
