--- a/src/routes/components/pageHeader/pageheader.styles.scss
+++ b/src/routes/components/pageHeader/pageheader.styles.scss
@@ -18,7 +18,7 @@
     height: 9vh;
     border-radius: 9px;
     margin-bottom: 2vh;
-    transition: background-color $theme-transition;
+    transition: all $theme-transition;
     text-align: center;
     @include themed() {
       border: 5px solid darken(t($primary), 25%);
