--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -16,6 +16,23 @@ $borderRadius: 4px;
   height: 69.5vh;
 }
 
+.fade-in {
+  opacity: 0;
+  animation-name: fade-in;
+  animation-duration: 1.2s;
+  animation-delay: 0.2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .button-container {
   width: 100%;
   height: 40px;
