Adjusted colors and added styling to vita

--- a/src/globals/_theme.scss
+++ b/src/globals/_theme.scss
@@ -18,21 +18,21 @@ $themes: (
     sub-primary: #0863a0,
     background-center: white,
     background-sides: #f5f4ec,
-    background: #f5f4ec,
+    background: #f3f1e3,
     text-color: #62807d,
     border-color: black,
     container-color: #f1e6d8,
     shadow-color: rgba(106, 106, 106, 0.6),
   ),
   dark: (
-    primary: #00446b,
+    primary: #123f5a,
     sub-primary: #d4eeff,
     background-center: #063b5f,
     background-sides: #02141e,
-    background: rgb(10, 25, 41),
+    background: rgb(6, 22, 40),
     text-color: #dcdff1,
     border-color: #f5f4ec,
-    container-color: #02141e,
+    container-color: #01131d,
     shadow-color: rgba(0, 0, 0, 0.6),
   ),
 );
