--- a/src/routes/vita/stats/categorycomponents/skills.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/skills.styles.scss
@@ -1,15 +1,19 @@
 .stack {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  align-items: center;
+  gap: 3px;
+  width: 80%;
   min-height: 10vh;
-  margin-top: 2vh;
+  margin-top: 4vh;
   margin-bottom: 2vh;
   .skillTitle {
-    width: 100%;
-    height: 7vh;
+    width: 80%;
+    height: 7.5vh;
     display: flex;
     align-items: center;
     gap: 5px;
+    padding-left: 7px;
+    background-color: antiquewhite;
   }
 }
