--- a/src/routes/vita/vita.styles.scss
+++ b/src/routes/vita/vita.styles.scss
@@ -14,6 +14,7 @@
     flex-direction: column;
     align-items: center;
     transition: all $theme-transition;
+    position: relative;
   }
 
   .categories-container {
@@ -22,11 +23,12 @@
     justify-content: flex-start;
     gap: 5px;
     width: 50vw;
-    height: 10vh !important;
+    height: 50vh !important;
     max-height: 100px;
-    padding-top: 10px;
+    padding-top: 1vh;
     top: 0 !important;
     position: sticky !important;
+    z-index: 5;
     @include themed() {
       box-shadow: 15px 20px 25px t($shadow-color);
     }
@@ -60,7 +62,6 @@
     display: inline-block;
     font-family: $theme-font;
     transform: translate(-4%, -4%);
-
     @include themed() {
       background-color: t($primary);
     }
@@ -69,9 +70,9 @@
     &::before {
       //bottom side
       @extend %test;
-      bottom: -14px;
-      height: 15px;
-      width: 100.4%;
+      bottom: -16px;
+      height: 16px;
+      width: 100%;
       left: 8px;
       transform: skewX(45deg);
       @include themed() {
@@ -82,10 +83,10 @@
     &::after {
       // right side
       @extend %test;
-      right: -17px;
-      height: 96%;
-      width: 17px;
-      bottom: -6px;
+      right: -15px;
+      height: 100%;
+      width: 16px;
+      bottom: -8px;
       transform: skewY(45deg);
       @include themed() {
         background-color: darken(t($primary), 25%);
