--- a/src/routes/vita/stats/categorycomponents/skills.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/skills.styles.scss
@@ -1,6 +1,7 @@
 @import "../../../../globals/_theme.scss";
 $buttonTransitionTime: 0.05s;
 $borderRadius: 4px;
+
 %test {
   position: absolute;
   content: "";
@@ -11,7 +12,7 @@ $borderRadius: 4px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3px;
+  gap: 1vh;
   width: 80%;
   min-height: 10vh;
   margin-top: 4vh;
@@ -22,11 +23,11 @@ $borderRadius: 4px;
     display: flex;
     align-items: center;
     gap: 8px;
-    padding-left: 7px;
+    padding-left: 20px;
     @include themed() {
       color: t($text-color);
     }
-    transform: translate(-5%, -15%);
+    transform: translate(-3%, -3%);
     font-family: $theme-font;
     text-decoration: none;
     font-size: 2.2vmin;
@@ -42,9 +43,7 @@ $borderRadius: 4px;
       left: 6px;
       transform: skewX(45deg);
       transition: all $buttonTransitionTime, background-color $theme-transition;
-      @include themed() {
-        background-color: darken(t($primary), 7%);
-      }
+      background-color: black;
     }
 
     &::after {
@@ -62,25 +61,11 @@ $borderRadius: 4px;
     }
 
     &:active {
-      margin-left: 10px;
-      margin-top: 10px;
-      &::before {
-        bottom: -5px;
-        height: 5px;
-        left: 3px;
-      }
-
-      &::after {
-        right: -5px;
-        width: 5px;
-        bottom: -3px;
-      }
+      transform: translate(-1%, -1%);
     }
 
     &:hover {
-      @include themed() {
-        background-color: darken(t($primary), 5%);
-      }
+      transform: translate(-2.5%, -2.5%);
       transition: all $buttonTransitionTime, background-color 0.1s;
     }
   }
