--- a/src/globals/_theme.scss
+++ b/src/globals/_theme.scss
@@ -60,6 +60,23 @@ $themes: (
   @return map-get($theme-map, $key);
 }
 
+.fade-in {
+  opacity: 0;
+  animation-name: fade-in;
+  animation-duration: 0.4s;
+  animation-delay: 0.1s;
+  animation-fill-mode: forwards;
+
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+}
+
 $theme-transition: 1.5s;
 :export {
   theme-transition: $theme-transition;
