--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -16,21 +16,10 @@ $borderRadius: 4px;
   height: 69.5vh;
 }
 
-.fade-in {
-  opacity: 0;
-  animation-name: fade-in;
+.home-fade-in {
+  @extend .fade-in;
   animation-duration: 1.2s;
   animation-delay: 0.2s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
 
 .button-container {
