--- a/src/routes/vita/vita.styles.scss
+++ b/src/routes/vita/vita.styles.scss
@@ -23,7 +23,7 @@
     justify-content: flex-start;
     gap: 5px;
     width: 50vw;
-    height: 50vh !important;
+    height: 12vh;
     max-height: 100px;
     padding-top: 1vh;
     top: 0 !important;
@@ -43,7 +43,7 @@
   }
 
   $button-height: 100%;
-  $button-width: 12.5vw;
+  $button-width: 25%;
   $button-font-size: 1.5em;
   $button-transform: translate(0%, 4%);
   $button-border-radius: 2px;
