Adjusted styling to be more dynamic

--- a/src/routes/feedback/feedback.styles.scss
+++ b/src/routes/feedback/feedback.styles.scss
@@ -55,9 +55,10 @@ $borderRadius: 4px;
     transform: translate(-5%, -15%);
     font-family: $theme-font;
     text-decoration: none;
-    font-size: 2.2vmin;
+    font-size: 1.1em;
     transition: all $buttonTransitionTime, background-color $theme-transition;
     border-width: 0px;
+    margin-top: 1.6vh;
 
     @include themed() {
       background-color: t($primary);
