--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -25,7 +25,8 @@ $borderRadius: 4px;
 .button-container {
   width: 100%;
   height: 40px;
-  margin-top: 5vh;
+  margin-top: 6vh;
+  margin-bottom: 2vh;
   display: flex;
   justify-content: center;
   align-items: center;
