--- a/src/routes/vita/stats/categorycomponents/experience.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/experience.styles.scss
@@ -3,8 +3,13 @@
   @extend .fade-in;
   display: flex;
   flex-direction: column;
-  width: 90%;
+  width: 80%;
   margin-top: 4vh;
   min-height: 15vh;
   background-color: red;
+
+  .Experience-Block {
+    display: flex;
+    flex-direction: row;
+  }
 }
