--- a/src/routes/vita/stats/categorycomponents/skills.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/skills.styles.scss
@@ -21,7 +21,7 @@ $borderRadius: 4px;
   margin-bottom: 2vh;
   .skill-instance {
     width: 80%;
-    height: 70px;
+    height: 65px;
     display: flex;
     align-items: flex-start;
     padding-left: 15px;
@@ -73,6 +73,7 @@ $borderRadius: 4px;
 
     .title-container {
       user-select: none;
+      font-size: 1.3em;
       margin-top: 0.5%;
       display: flex;
       align-items: center;
@@ -81,7 +82,7 @@ $borderRadius: 4px;
   .selected-skill {
     margin-top: 10px;
     margin-bottom: 5px;
-    height: 18vh;
+    height: 20vh;
     align-items: flex-start;
     flex-direction: column;
     padding-top: 0.3vh;
@@ -95,10 +96,11 @@ $borderRadius: 4px;
       user-select: none;
       height: 45%;
       width: 95%;
+      font-size: 1.1em;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      padding-top: 1%;
+      justify-content: flex-start;
+      //padding-top: 1%;
       padding-left: 1%;
     }
   }
