--- a/src/routes/vita/stats/categorycomponents/experience.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/experience.styles.scss
@@ -1,15 +1,78 @@
 @import "../../../../globals/_theme.scss";
+$buttonTransitionTime: 0.15s;
+%block {
+  @extend .block;
+}
+
 .Experience-Container {
   @extend .fade-in;
   display: flex;
   flex-direction: column;
   width: 80%;
-  margin-top: 4vh;
+  margin-top: 6vh;
   min-height: 15vh;
-  background-color: red;
+
+  .Time {
+    transition: all $theme-transition;
+    font-family: $theme-font;
+    font-size: 2em;
+    padding-left: 10px;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+
+    transform: translate(-2%, -2%);
+    font-family: $theme-font;
+    text-decoration: none;
+    transition: all $theme-transition;
+    margin-top: 2vh;
+    @include themed() {
+      background-color: t($background-center);
+      color: t($text-color);
+    }
+
+    &::before {
+      //bottom side
+      @extend %block;
+      @extend .bottom;
+    }
+
+    &::after {
+      //right side
+      @extend %block;
+      @extend .side;
+    }
+  }
 
   .Experience-Block {
     display: flex;
     flex-direction: row;
+
+    transform: translate(-2%, -2%);
+    font-family: $theme-font;
+    text-decoration: none;
+    transition: all $theme-transition;
+    margin-top: 2vh;
+
+    @include themed() {
+      background-color: t($container-color);
+      color: t($text-color);
+      box-shadow: 28px 28px 20px t($shadow-color);
+    }
+
+    &::before {
+      //bottom side
+      @extend %block;
+      @extend .bottom;
+    }
+
+    &::after {
+      //right side
+      @extend %block;
+      @extend .side;
+    }
+  }
+  .Image-Container {
+    background: white;
+    border-radius: 5px;
   }
 }
