Styling all over

--- a/src/routes/feedback/feedback.styles.scss
+++ b/src/routes/feedback/feedback.styles.scss
@@ -28,7 +28,7 @@ $borderRadius: 4px;
     min-width: 600px;
     padding: 2vmin;
     margin-bottom: 1vmin;
-    margin-top: 10px;
+    margin-top: 12px;
     border-radius: 10px;
     font-family: $theme-font;
     transition: all $theme-transition;
@@ -55,9 +55,10 @@ $borderRadius: 4px;
     transform: translate(-5%, -15%);
     font-family: $theme-font;
     text-decoration: none;
-    font-size: 1.4em;
+    font-size: 1.1em;
     transition: all $buttonTransitionTime, background-color $theme-transition;
     border-width: 0px;
+    margin-top: 1vh;
 
     @include themed() {
       background-color: t($primary);
