--- a/src/routes/home/explore_button/venturebutton.styles.scss
+++ b/src/routes/home/explore_button/venturebutton.styles.scss
@@ -1,7 +1,7 @@
 @import "../../../globals/_theme.scss";
 $buttonTransitionTime: 0.1s;
 $borderRadius: 4px;
-%test {
+%block {
   position: absolute;
   content: "";
   transition: all $buttonTransitionTime;
@@ -13,9 +13,10 @@ $borderRadius: 4px;
   transform: translate(-10%, -10%);
   font-family: $theme-font;
   text-decoration: none;
-  font-size: 2em;
+  font-size: 4vh;
   transition: all $buttonTransitionTime, background-color $theme-transition;
   border-width: 0px;
+  margin-bottom: 2vh;
 
   @include themed() {
     background-color: t($primary);
@@ -23,7 +24,7 @@ $borderRadius: 4px;
   }
   &::before {
     //bottom side
-    @extend %test;
+    @extend %block;
     bottom: -16px;
     height: 17px;
     width: 99.4%;
@@ -37,7 +38,7 @@ $borderRadius: 4px;
 
   &::after {
     // right side
-    @extend %test;
+    @extend %block;
     right: -15px;
     height: 100%;
     width: 16px;
@@ -50,6 +51,7 @@ $borderRadius: 4px;
   }
 
   &:active {
+    transform: translate(-8%, -3%);
     margin-left: 10px;
     margin-top: 10px;
     &::before {
